# mapvina-native-qt

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: Android.yml  Linux.yml  WASM.yml  Windows.yml  iOS.yml  macOS.yml  source-tarball.yml
LICENSES/: BSD-2-Clause.txt  MIT.txt
docs/: Building.md  Documentation.md  Doxyfile  README.md  Usage.md
docs/config/: footer.html
docs/examples/: example_Style.qml  snippets_Map.qml  snippets_Style.qml
docs/location/: LayerParameter.qml  QMapLibreLocation.dox  SourceParameter.qml  Style.qml  StyleParameter.qml
examples/quick/: CMakeLists.txt  CMakePresets.json  main.qml
examples/quick-standalone/: CMakeLists.txt  CMakePresets.json  main.cpp  main.qml
examples/widgets/: CMakeLists.txt  CMakePresets.json  main.cpp  mainwindow.cpp  mainwindow.hpp  window.cpp  window.hpp
src/: config.cmake.in  version_info.rc.in
src/core/: CMakeLists.txt  conversion_p.hpp  export_core.hpp  geojson.cpp  geojson_p.hpp  map.cpp  map.hpp  map_observer.cpp  map_observer_p.hpp  map_p.hpp  map_renderer.cpp  map_renderer_p.hpp  qmapvina.hpp  scheduler.cpp  scheduler_p.hpp  settings.cpp  settings.hpp  settings_p.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
src/location/: CMakeLists.txt  export_location.hpp  macros.cmake  qgeomap.cpp  qgeomap.hpp  qgeomap_p.hpp  qt_mapping_engine.cpp  qt_mapping_engine.hpp  style_change_utils.cpp  style_change_utils_p.hpp
src/quick/: CMakeLists.txt  export_quick_p.hpp  macros.cmake  texture_node_base.cpp  texture_node_base_p.hpp  texture_node_metal.mm  texture_node_metal_p.hpp  (+4 more)
(+73 files in other folders)
